# stockdownloader

./: .gitignore  BacktestEngine.java  BacktestResult.java  Dates.java  FormulaData.java  GetYahooQuotes.java  MACDStrategy.java  MorningstarData.java  Pattern.java  PriceData.java  README.md  RSIStrategy.java  SMACrossoverStrategy.java  SPYBacktest.java  StockDownloader.java  TechnicalIndicators.java  Trade.java  TradingStrategy.java  Trends.java  YahooFinanceData.java  YahooHistoricalData.java  build.gradle  pom.xml  pyproject.toml  requirements.txt
ios/StockAnalyzer/: project.yml
stockdownloader/: __init__.py
stockdownloader/analysis/: __init__.py  formula_calculator.py  pattern_analyzer.py  signal_generator.py
stockdownloader/app/: options_backtest.py  options_backtest_app.py  spy_backtest.py  spy_backtest_app.py  symbol_analysis.py  symbol_analysis_app.py  trend_analysis.py  trend_analysis_app.py
stockdownloader/backtest/: __init__.py  backtest_engine.py  backtest_report.py  backtest_report_formatter.py  backtest_result.py  options_backtest_engine.py  options_backtest_report.py  options_backtest_report_formatter.py  options_backtest_result.py
stockdownloader/data/: __init__.py  csv_loader.py  csv_price_data_loader.py  morningstar_client.py  stock_list_downloader.py  yahoo_auth.py  yahoo_auth_helper.py  yahoo_data_client.py  yahoo_finance.py  yahoo_finance_client.py  yahoo_historical.py  yahoo_historical_client.py  (+4 more)
tests/: conftest.py  test-price-data.csv  test_analysis.py  test_backtest.py  test_data.py  test_models.py  test_strategies.py  test_utilities.py
(+229 files in other folders)
